--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
   },
   "dependencies": {
     "@arcgis/core": "^4.19.3",
-    "element-plus": "^1.1.0-beta.6",
+    "element-plus": "^1.1.0-beta.17",
     "hydrogen-js-sdk": "^2.2.4",
     "js-cookie": "^2.2.1",
+    "path-browserify": "^1.0.1",
     "sass-resources-loader": "^2.2.3",
     "vue": "^3.1.2",
     "vue-router": "^4.0.4",
