--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "dependencies": {
     "@arcgis/core": "^4.19.3",
-    "element-plus": "^1.1.0-beta.17",
+    "element-plus": "1.1.0-beta.24",
     "hydrogen-js-sdk": "^2.2.4",
     "js-cookie": "^2.2.1",
     "path-browserify": "^1.0.1",
