--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "hydrogen-js-sdk": "^2.2.4",
     "js-cookie": "^2.2.1",
     "path-browserify": "^1.0.1",
+    "proj4": "^2.7.5",
     "sass-resources-loader": "^2.2.3",
     "vue": "^3.1.2",
     "vue-router": "^4.0.4",
