--- a/package.json
+++ b/package.json
@@ -1,31 +1,31 @@
 {
-  "name": "xlong-map-element-plus",
-  "version": "0.0.0",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "build:release": "vite build --mode release",
-    "serve": "vite preview"
-  },
-  "dependencies": {
-    "@arcgis/core": "^4.19.3",
-    "element-plus": "1.1.0-beta.24",
-    "hydrogen-js-sdk": "^2.2.4",
-    "js-cookie": "^2.2.1",
-    "path-browserify": "^1.0.1",
-    "proj4": "^2.7.5",
-    "sass-resources-loader": "^2.2.3",
-    "vue": "^3.1.2",
-    "vue-router": "^4.0.4",
-    "vuedraggable": "^4.0.3",
-    "vuex": "^4.0.0"
-  },
-  "devDependencies": {
-    "@vitejs/plugin-vue": "^1.2.5",
-    "@vue/compiler-sfc": "^3.0.5",
-    "sass": "^1.35.1",
-    "sass-loader": "^8.0.2",
-    "vite": "^2.6.4",
-    "vite-plugin-style-import": "^1.0.1"
-  }
+    "name": "xlong-map-admin",
+    "version": "0.1.0",
+    "scripts": {
+        "dev": "vite",
+        "build": "vite build",
+        "serve": "vite preview"
+    },
+    "dependencies": {
+        "@arcgis/core": "^4.19.3",
+        "element-plus": "1.1.0-beta.24",
+        "hydrogen-js-sdk": "^2.2.4",
+        "js-cookie": "^2.2.1",
+        "path-browserify": "^1.0.1",
+        "proj4": "^2.7.5",
+        "sass-resources-loader": "^2.2.3",
+        "unplugin-auto-import": "^0.5.4",
+        "vue": "^3.2.20",
+        "vue-router": "^4.0.4",
+        "vuedraggable": "^4.0.3",
+        "vuex": "^4.0.0"
+    },
+    "devDependencies": {
+        "@types/node": "^16.11.6",
+        "@vitejs/plugin-vue": "^1.9.4",
+        "@vue/compiler-sfc": "^3.2.20",
+        "sass": "^1.43.4",
+        "unplugin-vue-components": "^0.17.0",
+        "vite": "^2.6.13"
+    }
 }
