--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "scripts": {
         "dev": "vite",
         "build": "vite build",
+        "build:release": "vite build --mode release",
         "serve": "vite preview"
     },
     "dependencies": {
