--- a/package.json
+++ b/package.json
@@ -2,16 +2,17 @@
     "name": "xlong-map-admin",
     "version": "0.1.0",
     "scripts": {
-        "dev": "vite",
-        "build": "vite build",
+        "dev": "cross-env NODE_ENV=development vite",
+        "build": "cross-env NODE_ENV=production vite build",
         "build:release": "vite build --mode release",
         "serve": "vite preview"
     },
     "dependencies": {
         "@arcgis/core": "^4.19.3",
+        "axios": "^0.24.0",
         "element-plus": "1.1.0-beta.24",
-        "hydrogen-js-sdk": "^2.2.4",
         "js-cookie": "^2.2.1",
+        "mockjs": "^1.1.0",
         "path-browserify": "^1.0.1",
         "sass-resources-loader": "^2.2.3",
         "unplugin-auto-import": "^0.5.4",
@@ -24,8 +25,10 @@
         "@types/node": "^16.11.6",
         "@vitejs/plugin-vue": "^1.9.4",
         "@vue/compiler-sfc": "^3.2.20",
+        "cross-env": "^7.0.3",
         "sass": "^1.43.4",
         "unplugin-vue-components": "^0.17.0",
-        "vite": "^2.6.13"
+        "vite": "^2.6.13",
+        "vite-plugin-mock": "^2.9.6"
     }
 }
