修复警告：`defineProps` is a compiler macro and no longer needs to be imported和`defineEmits` is a compiler macro and no longer needs to be imported

--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
     "name": "xlong-map-admin",
     "version": "0.1.0",
     "scripts": {
-        "dev": "cross-env vite",
-        "build": "cross-env vite build",
+        "dev": "vite",
+        "build": "vite build",
         "build:release": "vite build --mode release",
         "serve": "vite preview"
     },
@@ -25,7 +25,6 @@
         "@types/node": "^16.11.6",
         "@vitejs/plugin-vue": "^1.9.4",
         "@vue/compiler-sfc": "^3.2.20",
-        "cross-env": "^7.0.3",
         "sass": "^1.43.4",
         "unplugin-vue-components": "^0.17.0",
         "vite": "^2.6.13",
