--- a/package.json
+++ b/package.json
@@ -1,33 +1,36 @@
 {
-    "name": "xlong-map-admin",
-    "version": "0.1.0",
-    "scripts": {
-        "dev": "vite",
-        "build": "vite build",
-        "build:release": "vite build --mode release",
-        "serve": "vite preview"
-    },
-    "dependencies": {
-        "@arcgis/core": "^4.19.3",
-        "axios": "^0.24.0",
-        "element-plus": "1.1.0-beta.24",
-        "js-cookie": "^2.2.1",
-        "mockjs": "^1.1.0",
-        "path-browserify": "^1.0.1",
-        "sass-resources-loader": "^2.2.3",
-        "unplugin-auto-import": "^0.5.4",
-        "vue": "^3.2.20",
-        "vue-router": "^4.0.4",
-        "vuedraggable": "^4.0.3",
-        "vuex": "^4.0.0"
-    },
-    "devDependencies": {
-        "@types/node": "^16.11.6",
-        "@vitejs/plugin-vue": "^1.9.4",
-        "@vue/compiler-sfc": "^3.2.20",
-        "sass": "^1.43.4",
-        "unplugin-vue-components": "^0.17.0",
-        "vite": "^2.6.13",
-        "vite-plugin-mock": "^2.9.6"
-    }
+  "name": "xlong-map-admin",
+  "description": "a management system for study only, use mock.js",
+  "author": "xLong <381612175@qq.com>",
+  "version": "1.1.1",
+  "private": true,
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "build:release": "vite build --mode release",
+    "serve": "vite preview"
+  },
+  "dependencies": {
+    "@arcgis/core": "^4.19.3",
+    "axios": "^0.24.0",
+    "element-plus": "1.1.0-beta.24",
+    "js-cookie": "^2.2.1",
+    "mockjs": "^1.1.0",
+    "path-browserify": "^1.0.1",
+    "sass-resources-loader": "^2.2.3",
+    "unplugin-auto-import": "^0.5.4",
+    "vue": "^3.2.20",
+    "vue-router": "^4.0.4",
+    "vuedraggable": "^4.0.3",
+    "vuex": "^4.0.0"
+  },
+  "devDependencies": {
+    "@types/node": "^16.11.6",
+    "@vitejs/plugin-vue": "^1.9.4",
+    "@vue/compiler-sfc": "^3.2.20",
+    "sass": "^1.43.4",
+    "unplugin-vue-components": "^0.17.0",
+    "vite": "^2.6.13",
+    "vite-plugin-mock": "^2.9.6"
+  }
 }
