--- a/package.json
+++ b/package.json
@@ -5,14 +5,16 @@
   "version": "1.1.1",
   "private": true,
   "scripts": {
-    "dev": "vite",
+    "dev": "cross-env USE_MOCK=true vite",
     "build": "vite build",
+    "build:mock": "cross-env USE_MOCK=true vite build",
     "build:release": "vite build --mode release",
     "serve": "vite preview"
   },
   "dependencies": {
     "@arcgis/core": "^4.19.3",
     "axios": "^0.24.0",
+    "cross-env": "^7.0.3",
     "element-plus": "1.1.0-beta.24",
     "js-cookie": "^2.2.1",
     "mockjs": "^1.1.0",
