--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
     "serve": "vite preview"
   },
   "dependencies": {
-    "@arcgis/core": "^4.19.3",
+    "@arcgis/core": "4.19.3",
+    "@element-plus/icons-vue": "^2.1.0",
     "axios": "^0.24.0",
     "cross-env": "^7.0.3",
-    "element-plus": "1.1.0-beta.24",
+    "element-plus": "2.1.8",
     "js-cookie": "^2.2.1",
     "mockjs": "^1.1.0",
     "path-browserify": "^1.0.1",
